--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             &#9679;
           </div>
           <div class="header uppercase">
-            Our Blog
+            Austin's Blog
           </div>
           <div class="subheader">
             created by Deena &#38; Grace
@@ -20,9 +20,9 @@
       </div>
       <div id="main-post">
         <div id="main-post-title">
-          Creating a Morning Ritual:
+          Learning to Use Git:
           <br/>
-          Why Your First Moves Matter
+          One step at a Time
         </div>
       </div>
       <div id="posts">
